--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 
 <body class="lang-zh">
-    <div id="container" style="height: 2000px;background:#ccc;">
+    <div id="container">
         <div id="header3" class="header">
             <div class="wrap">
                 <div class="logo">
@@ -366,7 +366,7 @@
                                     <li>
                                         <h4>關於TMTS</h4>
                                         <ul>
-                                            <li><a href="index.html">回首頁</a></li>
+                                            <li><a href="">展覽簡介</a></li>
                                             <li><a href="">展覽主題</a></li>
                                             <li><a href="">展後報告</a></li>
                                             <li><a href="">合作媒體</a></li>
@@ -413,7 +413,7 @@
                             <li class="dropdown">
                                 <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false">關於TMTS</a>
                                 <ul class="dropdown-menu" role="menu">
-                                    <li><a href="">展覽簡介</a></li>
+                                    <li><a href="2024_header_tw.html">測試頁面</a></li>
                                     <li><a href="">展覽主題</a></li>
                                     <li><a href="">展後報告</a></li>
                                     <li><a href="">合作媒體</a></li>
@@ -475,18 +475,16 @@
             </div>
         </div>
 
-
-        <div class="content">
+          <div class="content">
             <div style="height: 2000px;background:#eee;display: flex;flex-direction: column;justify-content: space-between;">
-                <div class="alert alert-info m-3 text-center">demo page start
-
+                <div class="alert alert-info m-3 text-center">index page start
                     <br><br>
-                    <a class="btn btn-primary" href="index.html">首頁</a>
+                    <a class="btn btn-primary" href="2024_header_tw.html">Demo頁面</a>
 
                 </div>
-                <div class="alert alert-info m-3 text-center">demo page end
+                <div class="alert alert-info m-3 text-center">index page end
                     <br><br>
-                    <a class="btn btn-primary" href="index.html">首頁</a>
+                    <a class="btn btn-primary" href="2024_header_tw.html">Demo頁面</a>
                 </div>
             </div>
           </div>
@@ -755,7 +753,7 @@
                                 <ul>
                                     <li class=" 
                                       ">
-                                        <a href="index.html">回首頁</a>
+                                        <a href="2024_header_tw.html">測試頁面</a>
                                     </li>
                                     <li class=" 
                                       ">
